--- a/config/reservation-service.properties
+++ b/config/reservation-service.properties
@@ -1,3 +1,3 @@
 server.port: ${PORT:8000}
-message=Hola
+message=Hola!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 spring.cloud.stream.bindings.input: "reservations"
