--- a/config/reservation-service.properties
+++ b/config/reservation-service.properties
@@ -1,3 +1,4 @@
 server.port: ${PORT:8000}
 message=Hola!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+spring.application.name=reservation-service
 spring.cloud.stream.bindings.input: "reservations"
