--- a/config/reservation-client.properties
+++ b/config/reservation-client.properties
@@ -1,3 +1,4 @@
 server.port: ${PORT:9999}
 spring.application.name=reservation-client
 spring.cloud.config.uri=http://localhost:8888
+spring.cloud.stream.bindings.output=reservations
