--- a/config/card-service.properties
+++ b/config/card-service.properties
@@ -1,3 +1,4 @@
 server.port: ${PORT:8600}
 spring.application.name=card-service
 spring.cloud.config.uri=http://localhost:8888
+spring.cloud.stream.bindings.input: "cards"
