--- a/config/selectCard-service.properties
+++ b/config/selectCard-service.properties
@@ -2,4 +2,4 @@ server.port: ${PORT:8605}
 spring.application.name=selectCard-service
 spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
-cards=B-Smart,Afinity Card,Clasica,Office Depot,Costco,Best Buy Banamex,The Home Depot,Oro,Platinum,Citi / AAdvantage
+#cards=B-Smart,Afinity Card,Clasica,Office Depot,Costco,Best Buy Banamex,The Home Depot,Oro,Platinum,Citi / AAdvantage
