--- a/config/card-service.properties
+++ b/config/card-service.properties
@@ -1,3 +1,5 @@
 server.port: ${PORT:8604}
 spring.application.name=card-service
 spring.cloud.config.uri=http://localhost:8888
+management.security.enabled=false
+cards=B-Smart,Afinity Card,Clasica,Office Depot,Costco,Best Buy Banamex,The Home Depot,Oro,Platinum,Citi / AAdvantage
