--- a/config/card-service.properties
+++ b/config/card-service.properties
@@ -2,4 +2,4 @@ server.port: ${PORT:8604}
 spring.application.name=card-service
 spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
-cards=B-Smart,Afinity Card,Clasica,Office Depot,Costco,Best Buy Banamex,The Home Depot,Oro,Platinum,Citi / AAdvantage
+cards=B-Smart,Afinity Card,Clasica,Office Depot,Costco,Best Buy Banamex,The Home Depot,Oro,Platinum,Citi / AAdvantage, Banamex Teletón, APAC
