--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.cloud.config.server.git.uri=https://github.com/etrevino1/microservices
+spring.cloud.config.server.git.search-paths=config
 server.port=8888
