--- a/config/eureka-service.properties
+++ b/config/eureka-service.properties
@@ -1,3 +1,4 @@
-server.port: ${PORT:8761}
+#server.port: ${PORT:8761}
 spring.application.name=eureka-service
 spring.cloud.config.uri=http://localhost:8888
+eureka.instance.instanceId=${spring.application.name}:${random.value}
